FIxed some spacing

--- a/style.css
+++ b/style.css
@@ -166,8 +166,10 @@ filter: brightness(100%);
 }
 .panel{
 	padding-top:5;
-	height: 800px;
+	height: 300px;
+	backg
 }
+
 .panel img{	display: block; width: 50%;height: 200px; margin:auto;}
 .panel p{
  font-family: 'roboto',sans-serif;
@@ -230,14 +232,13 @@ h1 {
 .mechSection{
 	background-color: rgba(188, 184, 184, 0.25);
 	margin-top: 60px;
+	padding-bottom: 60px;
 
 }
 
 .row {
     margin: 8px 20px;
-
 }
-
 /* Add padding BETWEEN each column */
 .row,
 .row > .column {
@@ -287,7 +288,9 @@ h1 {
 }
 
 
-
+.elecSection{
+	margin-top: 60px;
+}
 
 
 h2{
